--- a/index.html
+++ b/index.html
@@ -231,7 +231,11 @@
                         <div class="about-item">
                             <div class="pb-5">
                                 <h1 class="display-5 text-capitalize">Sobre <span class="text-primary">Inventory GasAir</span></h1>
-                                <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut amet nemo expedita asperiores commodi accusantium at cum harum, excepturi, quia tempora cupiditate! Adipisci facilis modi quisquam quia distinctio,
+                                <p class="mb-0">Una empresa líder en el sector de IIoT industrial.
+                                    Proporcionamos sensores modulares autónomos
+                                    para la gestión de inventarios y activos en múltiples
+                                    industrias, optimizando procesos y reduciendo
+                                    costos operativos.
                                 </p>
                             </div>
                             <div class="row g-4">
@@ -256,7 +260,7 @@
                             </div>
                             <p class="text-item my-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae, aliquam ipsum. Sed suscipit dolorem libero sequi aut natus debitis reprehenderit facilis quaerat similique, est at in eum. Quo, obcaecati in!
                             </p>
-                            <div class="row g-4">
+                            <!-- <div class="row g-4">
                                 <div class="col-lg-6">
                                     <div class="text-center rounded bg-secondary p-4">
                                         <h1 class="display-6 text-white">17</h1>
@@ -271,10 +275,10 @@
                                         <p class="mb-0"><i class="fa fa-check-circle text-primary me-1"></i> Lorem, ipsum dolor</p>
                                     </div>
                                 </div>
-                                <!-- <div class="col-lg-5 d-flex align-items-center">
+                                <div class="col-lg-5 d-flex align-items-center">
                                     <a href="#" class="btn btn-primary rounded py-3 px-5">More About Us</a>
-                                </div> -->
-                                <!-- <div class="col-lg-7">
+                                </div>
+                                <div class="col-lg-7">
                                     <div class="d-flex align-items-center">
                                         <img src="img/attachment-img.jpg" class="img-fluid rounded-circle border border-4 border-secondary" style="width: 100px; height: 100px;" alt="Image">
                                         <div class="ms-4">
@@ -282,8 +286,8 @@
                                             <p class="mb-0">Carveo Founder</p>
                                         </div>
                                     </div>
-                                </div> -->
-                            </div>
+                                </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="col-xl-6 wow fadeInRight" data-wow-delay="0.2s">
@@ -423,6 +427,9 @@
                             <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ipsam quasi quibusdam ipsa perferendis iusto?</p>
                         </div>
                     </div> -->
+                </div>
+                <div class="text-center mt-5 wow fadeInUp" data-wow-delay="0.5s">
+                    <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Ver más</a>
                 </div>
             </div>
         </div>
