Actualización de diseño

--- a/index.html
+++ b/index.html
@@ -504,6 +504,18 @@
             </div>
         </div>
 
+
+        <div class="container-fluid bg-white feature py-5">
+            <div class="container py-5">
+            <div class="row">
+                <h1 class="text-center mt-4">Aplicaciones industriales IIoT y sensores</h1>
+                <div class="col-12">
+                    <img src="img/img-2.jpg" class="img-fluid w-100" alt="Aplicaciones industriales IIoT y sensores">
+                </div>
+            </div>
+            </div>
+        </div>
+
         <!-- Car categories Start -->
         <!-- <div class="container-fluid categories pb-5">
             <div class="container pb-5">
