--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <div class="navbar-nav ms-auto py-0">
                             <a href="#" class="nav-item nav-link active">Inicio</a>
                             <a href="#" class="nav-item nav-link">Nosotros</a>
-                            <a href="#" class="nav-item nav-link">Beneficios</a>
+                            <a href="feature.html" class="nav-item nav-link">Soluciones</a>
                             <!-- <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                                 <div class="dropdown-menu m-0">
@@ -105,29 +105,28 @@
         <!-- Carousel Start -->
         <div class="header-carousel">
             <div id="carouselId" class="carousel slide" data-bs-ride="carousel" data-bs-interval="false">
-                <div class="carousel-inner" role="listbox">
-                    <div class="carousel-item active">
-                        <video class="img-fluid w-100" autoplay loop muted>
-                            <source src="img/video/video_1.mp4" type="video/mp4">
-                            Your browser does not support the video tag.
-                        </video>
-                        <div class="carousel-caption">
-                            <div class="container py-4">
-                                <div class="row g-5">
-                                    <div class="col-lg-6 fadeInLeft animated" data-animation="fadeInLeft" data-delay="1s" style="animation-delay: 1s;">
-                                        
-                                    </div>
-                                    <div class="col-lg-6 d-none d-lg-flex fadeInRight animated" data-animation="fadeInRight" data-delay="1s" style="animation-delay: 1s;">
-                                        <div class="text-start">
-                                            <h1 class="display-5 text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
-                                            <p>IOT</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+            <div class="carousel-inner" role="listbox">
+                <div class="carousel-item active">
+                <video class="img-fluid w-100" autoplay loop muted style="object-fit: cover; height: 100vh;">
+                    <source src="img/video/video_1.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+                <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
+                    <div class="container py-4">
+                    <div class="row g-5">
+                        <div class="col-lg-6 fadeInLeft animated" data-animation="fadeInLeft" data-delay="1s" style="animation-delay: 1s;">
+                        </div>
+                        <div class="col-lg-6 d-flex fadeInRight animated" data-animation="fadeInRight" data-delay="1s" style="animation-delay: 1s;"></div>
+                        <div class="text-start">
+                            <h1 class="display-5 text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
+                            <p>IOT</p>
+                        </div>
                         </div>
                     </div>
+                    </div>
                 </div>
+                </div>
+            </div>
             </div>
         </div>
         <!-- Carousel End -->
