--- a/feature.html
+++ b/feature.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="utf-8">
-    <title>Cental - Car Rent Website Template</title>
+    <title>Inventory GasAir - Nuestras Soluciones</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
+    
+    <!-- Favicon -->
+    <link href="img/icon.png" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -37,7 +40,7 @@
     <div id="spinner"
         class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
-            <span class="sr-only">Loading...</span>
+            <span class="sr-only">Cargando...</span>
         </div>
     </div>
     <!-- Spinner End -->
@@ -87,8 +90,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto py-0">
-                        <a href="#" class="nav-item nav-link">Inicio</a>
-                        <a href="#" class="nav-item nav-link">Nosotros</a>
+                        <a href="index.html" class="nav-item nav-link">Inicio</a>
+                        <a href="feature.html" class="nav-item nav-link">Nosotros</a>
                         <a href="feature.html" class="nav-item nav-link active">Soluciones</a>
                         <!-- <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
@@ -100,7 +103,7 @@
                                     <a href="404.html" class="dropdown-item">404 Page</a>
                                 </div>
                             </div> -->
-                        <a href="#" class="nav-item nav-link">Contacto</a>
+                        <a href="contact.html" class="nav-item nav-link">Contacto</a>
                     </div>
                     <!-- <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Get Started</a> -->
                 </div>
@@ -312,9 +315,10 @@
                 <div class="col-md-6 col-lg-6 col-xl-3">
                     <div class="footer-item d-flex flex-column">
                         <h4 class="text-white mb-4">Accesos Directos</h4>
-                        <a href="#"><i class="fas fa-angle-right me-2"></i> Nosotros</a>
-                        <a href="#"><i class="fas fa-angle-right me-2"></i> Beneficios</a>
-                        <a href="#"><i class="fas fa-angle-right me-2"></i> Contactos</a>
+                        <a href="index.html"><i class="fas fa-angle-right me-2"></i> Inicio</a>
+                        <a href="about.html"><i class="fas fa-angle-right me-2"></i> Nosotros</a>
+                        <a href="feature.html"><i class="fas fa-angle-right me-2"></i> Soluciones</a>
+                        <a href="contact.html"><i class="fas fa-angle-right me-2"></i> Contactos</a>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-6 col-xl-3">
