--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
     <head>
         <meta charset="utf-8">
-        <title>Cental - Car Rent Website Template</title>
+        <title>Inventory GasAir - Contactanos</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
         <meta content="" name="description">
+
+        <!-- Favicon -->
+        <link href="img/icon.png" rel="icon">
 
         <!-- Google Web Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -34,7 +37,7 @@
         <!-- Spinner Start -->
         <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
             <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
-                <span class="sr-only">Loading...</span>
+                <span class="sr-only">Cargando...</span>
             </div>
         </div>
         <!-- Spinner End -->
@@ -63,25 +66,25 @@
         </div>
         <!-- Topbar End -->
 
+
         <!-- Navbar & Hero Start -->
         <div class="container-fluid nav-bar sticky-top px-0 px-lg-4 py-2 py-lg-0">
             <div class="container">
                 <nav class="navbar navbar-expand-lg navbar-light">
-                    <a href="" class="navbar-brand p-0">
-                        <h1 class="display-6 text-primary"><i class="fas fa-car-alt me-3"></i></i>Cental</h1>
+                    <a href="index.html" class="navbar-brand p-0">
+                        <!-- <h1 class="display-6 text-primary"><i class="fas fa-car-alt me-3"></i></i>Cental</h1> -->
                         <!-- <img src="img/logo.png" alt="Logo"> -->
+                        <img src="img/logo.jpeg" alt="Logo">
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="fa fa-bars"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarCollapse">
-                        <div class="navbar-nav mx-auto py-0">
-                            <a href="index.html" class="nav-item nav-link">Home</a>
-                            <a href="about.html" class="nav-item nav-link">About</a>
-                            <a href="service.html" class="nav-item nav-link">Service</a>
-                            <a href="blog.html" class="nav-item nav-link">Blog</a>
-                            
-                            <div class="nav-item dropdown">
+                        <div class="navbar-nav ms-auto py-0">
+                            <a href="index.html" class="nav-item nav-link">Inicio</a>
+                            <a href="about.html" class="nav-item nav-link">Nosotros</a>
+                            <a href="feature.html" class="nav-item nav-link">Soluciones</a>
+                            <!-- <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                                 <div class="dropdown-menu m-0">
                                     <a href="feature.html" class="dropdown-item">Our Feature</a>
@@ -90,28 +93,29 @@
                                     <a href="testimonial.html" class="dropdown-item">Testimonial</a>
                                     <a href="404.html" class="dropdown-item">404 Page</a>
                                 </div>
-                            </div>
-                            <a href="contact.html" class="nav-item nav-link active">Contact</a>
+                            </div> -->
+                            <a href="contact.html" class="nav-item nav-link active">Contacto</a>
                         </div>
-                        <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Get Started</a>
+                        <!-- <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Get Started</a> -->
                     </div>
                 </nav>
             </div>
         </div>
         <!-- Navbar & Hero End -->
 
+        
         <!-- Header Start -->
         <div class="container-fluid bg-breadcrumb">
             <div class="container text-center py-5" style="max-width: 900px;">
-                <h4 class="text-white display-4 mb-4 wow fadeInDown" data-wow-delay="0.1s">Contact Us</h4>
+                <h4 class="text-white display-4 mb-4 wow fadeInDown" data-wow-delay="0.1s">Contactanos</h4>
                 <ol class="breadcrumb d-flex justify-content-center mb-0 wow fadeInDown" data-wow-delay="0.3s">
-                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                    <li class="breadcrumb-item active text-primary">Contact</li>
+                    <li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
+                    <li class="breadcrumb-item active text-primary">Contactanos</li>
                 </ol>    
             </div>
         </div>
         <!-- Header End -->
+
 
         <!-- Contact Start -->
         <div class="container-fluid contact py-5">
@@ -129,7 +133,7 @@
                                         <i class="fas fa-map-marker-alt fa-2x"></i>
                                     </div>
                                     <div>
-                                        <h4>Address</h4>
+                                        <h4>Ubicación</h4>
                                         <p class="mb-0">123 Street New York.USA</p>
                                     </div>
                                 </div>
@@ -140,7 +144,7 @@
                                         <i class="fas fa-envelope fa-2x"></i>
                                     </div>
                                     <div>
-                                        <h4>Mail Us</h4>
+                                        <h4>Correo</h4>
                                         <p class="mb-0">info@example.com</p>
                                     </div>
                                 </div>
@@ -151,7 +155,7 @@
                                         <i class="fa fa-phone-alt fa-2x"></i>
                                     </div>
                                     <div>
-                                        <h4>Telephone</h4>
+                                        <h4>Telefono</h4>
                                         <p class="mb-0">(+012) 3456 7890</p>
                                     </div>
                                 </div>
@@ -277,47 +281,41 @@
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <div class="footer-item">
-                                <h4 class="text-white mb-4">About Us</h4>
+                                <h4 class="text-white mb-4">Sobre Nosotros</h4>
                                 <p class="mb-3">Dolor amet sit justo amet elitr clita ipsum elitr est.Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur adipiscing elit.</p>
                             </div>
-                            <div class="position-relative">
+                            <!-- <div class="position-relative">
                                 <input class="form-control rounded-pill w-100 py-3 ps-4 pe-5" type="text" placeholder="Enter your email">
                                 <button type="button" class="btn btn-secondary rounded-pill position-absolute top-0 end-0 py-2 mt-2 me-2">Subscribe</button>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
-                            <h4 class="text-white mb-4">Quick Links</h4>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> About</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Cars</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Car Types</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Team</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Contact us</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Terms & Conditions</a>
+                            <h4 class="text-white mb-4">Accesos Directos</h4>
+                            <a href="index.html"><i class="fas fa-angle-right me-2"></i> Inicio</a>
+                            <a href="about.html"><i class="fas fa-angle-right me-2"></i> Nosotros</a>
+                            <a href="feature.html"><i class="fas fa-angle-right me-2"></i> Soluciones</a>
+                            <a href="contact.html"><i class="fas fa-angle-right me-2"></i> Contactos</a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
-                            <h4 class="text-white mb-4">Business Hours</h4>
+                            <h4 class="text-white mb-4">Horarios</h4>
                             <div class="mb-3">
-                                <h6 class="text-muted mb-0">Mon - Friday:</h6>
+                                <h6 class="text-muted mb-0">Lun - Viernes:</h6>
                                 <p class="text-white mb-0">09.00 am to 07.00 pm</p>
                             </div>
                             <div class="mb-3">
-                                <h6 class="text-muted mb-0">Saturday:</h6>
+                                <h6 class="text-muted mb-0">Sabado:</h6>
                                 <p class="text-white mb-0">10.00 am to 05.00 pm</p>
-                            </div>
-                            <div class="mb-3">
-                                <h6 class="text-muted mb-0">Vacation:</h6>
-                                <p class="text-white mb-0">All Sunday is our vacation</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
-                            <h4 class="text-white mb-4">Contact Info</h4>
-                            <a href="#"><i class="fa fa-map-marker-alt me-2"></i> 123 Street, New York, USA</a>
+                            <h4 class="text-white mb-4">Contacto</h4>
+                            <a href="#"><i class="fa fa-map-marker-alt me-2"></i> 123 Calle, León, Gto. México</a>
                             <a href="mailto:info@example.com"><i class="fas fa-envelope me-2"></i> info@example.com</a>
                             <a href="tel:+012 345 67890"><i class="fas fa-phone me-2"></i> +012 345 67890</a>
                             <a href="tel:+012 345 67890" class="mb-3"><i class="fas fa-print me-2"></i> +012 345 67890</a>
