--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
     <head>
         <meta charset="utf-8">
@@ -8,13 +8,16 @@
         <meta content="" name="keywords">
         <meta content="" name="description">
 
+        <!-- Favicon -->
+        <link href="img/icon.png" rel="icon">
+
         <!-- Google Web Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> 
 
         <!-- Icon Font Stylesheet -->
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.7.2/css/all.css"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
         <!-- Libraries Stylesheet -->
@@ -34,7 +37,7 @@
         <!-- Spinner Start -->
         <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
             <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
-                <span class="sr-only">Loading...</span>
+                <span class="sr-only">Cargando...</span>
             </div>
         </div>
         <!-- Spinner End -->
@@ -79,8 +82,8 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                         <div class="navbar-nav ms-auto py-0">
-                            <a href="#" class="nav-item nav-link active">Inicio</a>
-                            <a href="#" class="nav-item nav-link">Nosotros</a>
+                            <a href="index.html" class="nav-item nav-link active">Inicio</a>
+                            <a href="about.html" class="nav-item nav-link">Nosotros</a>
                             <a href="feature.html" class="nav-item nav-link">Soluciones</a>
                             <!-- <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
@@ -92,7 +95,7 @@
                                     <a href="404.html" class="dropdown-item">404 Page</a>
                                 </div>
                             </div> -->
-                            <a href="#" class="nav-item nav-link">Contacto</a>
+                            <a href="contact.html" class="nav-item nav-link">Contacto</a>
                         </div>
                         <!-- <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Get Started</a> -->
                     </div>
@@ -105,28 +108,32 @@
         <!-- Carousel Start -->
         <div class="header-carousel">
             <div id="carouselId" class="carousel slide" data-bs-ride="carousel" data-bs-interval="false">
-            <div class="carousel-inner" role="listbox">
-                <div class="carousel-item active">
-                <video class="img-fluid w-100" autoplay loop muted style="object-fit: cover; height: 100vh;">
-                    <source src="img/video/video_1.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
-                <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
-                    <div class="container py-4">
-                    <div class="row g-5">
-                        <div class="col-lg-6 fadeInLeft animated" data-animation="fadeInLeft" data-delay="1s" style="animation-delay: 1s;">
-                        </div>
-                        <div class="col-lg-6 d-flex fadeInRight animated" data-animation="fadeInRight" data-delay="1s" style="animation-delay: 1s;"></div>
-                        <div class="text-start">
-                            <h1 class="display-5 text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
-                            <p>IOT</p>
-                        </div>
+                <div class="carousel-inner" role="listbox">
+                    <div class="carousel-item active">
+                        <video class="img-fluid w-100" autoplay loop muted style="object-fit:contain; height: 100%;">
+                            <source src="img/video/video_2.mp4" type="video/mp4">
+                        </video>
+                        <div class="carousel-caption d-flex flex-column justify-content-center align-items-center h-100">
+                            <div class="container py-4">
+                                <div class="row g-5">
+                                    <div class="col-md-7 text-start">
+                                    <h1 class="display-5 text-dark">GasAir</h1>
+                                    <p>IOT</p>
+                                    </div>
+                                    <!-- <div class="col-md-5">
+                                        <div class="mockup">
+                                            <img src="img/phone.png" alt="Mockup Celular">
+                                            <video autoplay loop muted playsinline>
+                                            <source src="img/video/video_1.mp4" type="video/mp4">
+                                            Tu navegador no soporta videos.
+                                            </video>
+                                        </div>                                          
+                                    </div> -->
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    </div>
                 </div>
-                </div>
-            </div>
             </div>
         </div>
         <!-- Carousel End -->
@@ -273,7 +280,7 @@
         <!-- Fact Counter -->
 
 
-        <!-- Services Start -->
+        <!-- Services Start --
         <div class="container-fluid service py-5">
             <div class="container py-5">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 800px;">
@@ -286,10 +293,10 @@
                     <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="service-item p-4">
                             <div class="service-icon mb-4">
-                                <i class="fa fa-phone-alt fa-2x"></i>
+                                <i class="fa-solid fa-clock fa-2x"></i>
                             </div>
                             <h5 class="mb-3">Monitoreo de tanques de gas en tiempo real</h5>
-                            <!-- <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ipsam quasi quibusdam ipsa perferendis iusto?</p> -->
+                            <!- <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ipsam quasi quibusdam ipsa perferendis iusto?</p> ->
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.3s">
@@ -298,19 +305,21 @@
                                 <i class="fa fa-money-bill-alt fa-2x"></i>
                             </div>
                             <h5 class="mb-3">Control de calidad en procesos de manufactura</h5>
-                            <!-- <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ipsam quasi quibusdam ipsa perferendis iusto?</p> -->
+                            <!- <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ipsam quasi quibusdam ipsa perferendis iusto?</p> ->
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.5s">
                         <div class="service-item p-4">
                             <div class="service-icon mb-4">
-                                <i class="fa fa-road fa-2x"></i>
+                                <i class="fa-solid fa-industry fa-2x"></i>
                             </div>
                             <h5 class="mb-3">Supervisión de parámetros críticos en la industria química</h5>
-                            <!-- <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ipsam quasi quibusdam ipsa perferendis iusto?</p> -->
+                            <!- <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ipsam quasi quibusdam ipsa perferendis iusto?</p> ->
                         </div>
                     </div>
-                    <!-- <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
+
+                    Zona comentada
+                    <!- <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="service-item p-4">
                             <div class="service-icon mb-4">
                                 <i class="fa fa-umbrella fa-2x"></i>
@@ -336,14 +345,16 @@
                             <h5 class="mb-3">Free Rides</h5>
                             <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit ipsam quasi quibusdam ipsa perferendis iusto?</p>
                         </div>
-                    </div> -->
+                    </div> --
+                    Zona comentada
+
                 </div>
                 <div class="text-center mt-5 wow fadeInUp" data-wow-delay="0.5s">
-                    <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Ver más</a>
+                    <a href="feature.html" class="btn btn-primary rounded-pill py-2 px-4">Ver más</a>
                 </div>
             </div>
         </div>
-        <!-- Services End -->
+        <!- Services End -->
 
         <div class="container-fluid feature py-5">
             <div class="container py-5">
@@ -360,6 +371,7 @@
                             <div class="col-12 wow fadeInUp" data-wow-delay="0.1s">
                                 <div class="feature-item">
                                     <div class="feature-icon">
+                                        <i class=""></i>
                                         <span class="fa fa-trophy fa-2x"></span>
                                     </div>
                                     <div class="ms-4">
@@ -655,6 +667,7 @@
         </div>
         <!-- Car Steps End -->
 
+
         <!-- Blog Start -->
         <!-- <div class="container-fluid blog py-5">
             <div class="container py-5">
@@ -823,7 +836,7 @@
 
         <br>
         <!-- Testimonial Start -->
-        <div class="container-fluid testimonial pb-5">
+        <!-- <div class="container-fluid testimonial pb-5">
             <div class="container pb-5">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 800px;">
                     <h1 class="display-5 text-capitalize mb-3">Reseñas de<span class="text-primary"> Nuestros Clientes</span></h1>
@@ -896,7 +909,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- Testimonial End -->
 
         <!-- Footer Start -->
@@ -918,9 +931,10 @@
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="text-white mb-4">Accesos Directos</h4>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Nosotros</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Beneficios</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Contactos</a>
+                            <a href="index.html"><i class="fas fa-angle-right me-2"></i> Inicio</a>
+                            <a href="about.html"><i class="fas fa-angle-right me-2"></i> Nosotros</a>
+                            <a href="feature.html"><i class="fas fa-angle-right me-2"></i> Soluciones</a>
+                            <a href="contact.html"><i class="fas fa-angle-right me-2"></i> Contactos</a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
