--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
                     <div class="row">
                         <div class="col-lg-6">
                             <div class="video">
-                                <video controls autoplay loop muted playsinline class="w-100">
+                                <video autoplay loop muted playsinline class="w-100">
                                     <source src="img/video/video_demo_1.mp4" type="video/mp4">
                                 </video>
                             </div>
@@ -767,7 +767,9 @@
             </div>
         </div> -->
         <!-- Blog End -->
+         
 
+        <br><br>
         <!-- Banner Start -->
         <div class="container-fluid banner pb-5 wow zoomInDown" data-wow-delay="0.1s">
             <div class="container pb-5">
@@ -779,7 +781,7 @@
                         <p class="text-white">Envianos un mensaje a nuestros contactos.</p>
                         <div class="banner-btn">
                             <a href="#" class="btn btn-secondary rounded-pill py-3 px-4 px-md-5 me-2">WhatchApp</a>
-                            <a href="#" class="btn btn-primary rounded-pill py-3 px-4 px-md-5 ms-2">Contact Us</a>
+                            <a href="#" class="btn btn-primary rounded-pill py-3 px-4 px-md-5 ms-2">Contactanos</a>
                         </div>
                     </div>
                 </div>
