--- a/feature.html
+++ b/feature.html
@@ -19,7 +19,7 @@
         rel="stylesheet">
 
     <!-- Icon Font Stylesheet -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.7.2/css/all.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
@@ -44,6 +44,7 @@
         </div>
     </div>
     <!-- Spinner End -->
+
 
     <!-- Topbar Start -->
     <div class="container-fluid topbar bg-secondary d-none d-xl-block w-100">
@@ -75,6 +76,7 @@
         </div>
     </div>
     <!-- Topbar End -->
+
 
     <!-- Navbar & Hero Start -->
     <div class="container-fluid nav-bar sticky-top px-0 px-lg-4 py-2 py-lg-0">
@@ -112,6 +114,7 @@
     </div>
     <!-- Navbar & Hero End -->
 
+
     <!-- Header Start -->
     <div class="container-fluid bg-breadcrumb">
         <div class="container text-center py-5" style="max-width: 900px;">
@@ -123,6 +126,7 @@
         </div>
     </div>
     <!-- Header End -->
+
 
     <!-- Features Start -->
     <div class="container-fluid feature py-5">
@@ -212,7 +216,7 @@
                             <div class="counter-item-icon mx-auto">
                                 <i class="fas fa-thumbs-up fa-2x"></i>
                             </div>
-                            <h4 class="text-white mb-0">Happy Clients</h4>
+                            <h4 class="text-white mb-0">Sensor de Presión</h4>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 col-xl-2 wow fadeInUp" data-wow-delay="0.3s">
@@ -220,7 +224,7 @@
                             <div class="counter-item-icon mx-auto">
                                 <i class="fas fa-car-alt fa-2x"></i>
                             </div>
-                            <h4 class="text-white mb-0">Number of Cars</h4>
+                            <h4 class="text-white mb-0">Sensor de Nivel</h4>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 col-xl-2 wow fadeInUp" data-wow-delay="0.5s">
@@ -228,7 +232,7 @@
                             <div class="counter-item-icon mx-auto">
                                 <i class="fas fa-building fa-2x"></i>
                             </div>
-                            <h4 class="text-white mb-0">Car Center</h4>
+                            <h4 class="text-white mb-0">Sensor de Temperatura</h4>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 col-xl-2 wow fadeInUp" data-wow-delay="0.7s">
@@ -236,7 +240,7 @@
                             <div class="counter-item-icon mx-auto">
                                 <i class="fas fa-clock fa-2x"></i>
                             </div>
-                            <h4 class="text-white mb-0">Total kilometers</h4>
+                            <h4 class="text-white mb-0">Totalizador y Caudalímetro</h4>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 col-xl-2 wow fadeInUp" data-wow-delay="0.9s">
@@ -244,7 +248,7 @@
                             <div class="counter-item-icon mx-auto">
                                 <i class="fas fa-car-alt fa-2x"></i>
                             </div>
-                            <h4 class="text-white mb-0">Number of Cars</h4>
+                            <h4 class="text-white mb-0">Sensor de Distancia</h4>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 col-xl-2 wow fadeInUp" data-wow-delay="0.9s">
@@ -252,7 +256,7 @@
                             <div class="counter-item-icon mx-auto">
                                 <i class="fas fa-car-alt fa-2x"></i>
                             </div>
-                            <h4 class="text-white mb-0">Number of Cars</h4>
+                            <h4 class="text-white mb-0">Calidad de Agua</h4>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 col-xl-2 wow fadeInUp" data-wow-delay="0.9s">
@@ -260,7 +264,7 @@
                             <div class="counter-item-icon mx-auto">
                                 <i class="fas fa-car-alt fa-2x"></i>
                             </div>
-                            <h4 class="text-white mb-0">Number of Cars</h4>
+                            <h4 class="text-white mb-0">Sensor de Humedad y Lluvia</h4>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 col-xl-2 wow fadeInUp" data-wow-delay="0.9s">
@@ -268,7 +272,31 @@
                             <div class="counter-item-icon mx-auto">
                                 <i class="fas fa-car-alt fa-2x"></i>
                             </div>
-                            <h4 class="text-white mb-0">Number of Cars</h4>
+                            <h4 class="text-white mb-0">Interfaz de un solo canal</h4>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 col-xl-2 wow fadeInUp" data-wow-delay="0.9s">
+                        <div class="counter-item text-center">
+                            <div class="counter-item-icon mx-auto">
+                                <i class="fas fa-car-alt fa-2x"></i>
+                            </div>
+                            <h4 class="text-white mb-0">interfaz multicanal</h4>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 col-xl-2 wow fadeInUp" data-wow-delay="0.9s">
+                        <div class="counter-item text-center">
+                            <div class="counter-item-icon mx-auto">
+                                <i class="fas fa-car-alt fa-2x"></i>
+                            </div>
+                            <h4 class="text-white mb-0">diseño y personalización</h4>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4 col-xl-2 wow fadeInUp" data-wow-delay="0.9s">
+                        <div class="counter-item text-center">
+                            <div class="counter-item-icon mx-auto">
+                                <i class="fas fa-car-alt fa-2x"></i>
+                            </div>
+                            <h4 class="text-white mb-0">plataforma de microservicios</h4>
                         </div>
                     </div>
                 </div>
@@ -295,6 +323,7 @@
         </div>
     </div>
     <!-- Banner End -->
+
 
     <!-- Footer Start -->
     <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay="0.2s">
